--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- Navbar-->
     <nav id="index" class="navbar navbar-expand-lg text-white fixed-top mb-4">
         <div class="container">
-            <a class="navbar-brand lobster-regular text-white logo" href="./index.html">Ricomida</a>
+            <a class="navbar-brand lobster-regular text-white logo link" href="./index.html">Ricomida</a>
             <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -29,10 +29,10 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav navbar-nav ms-auto text-white cabin-regular">
-                    <a class="nav-link active text-white" aria-current="page" href="./index.html">Inicio</a>
-                    <a class="nav-link text-white" href="#recetas">Recetas</a>
-                    <a class="nav-link text-white" href="#nosotros">Nosotros</a>
-                    <a class="nav-link text-white" href="#contacto">Contacto</a>
+                    <a class="nav-link link active text-white" aria-current="page" href="./index.html">Inicio</a>
+                    <a class="nav-link link text-white" href="#recetas">Recetas</a>
+                    <a class="nav-link link text-white" href="#nosotros">Nosotros</a>
+                    <a class="nav-link link text-white" href="#contacto">Contacto</a>
                 </div>
             </div>
         </div>
@@ -55,10 +55,17 @@
                 </div>
                 <div class="row">
                     <div class="col-sm-12">
-                        <a id="enviarCorreo" class="nav-link text-white cabin-regular" href="#portafolio">Enviar por correo</a>
-                        <a class="nav-link text-white cabin-regular" href="#contacto">Añadir a favoritos</a>
+                        <a id="enviarCorreo" class="btn btn-outline-light btn-custom btn-lg cabin-regular" href="#portafolio"><span data-toggle="tooltip" data-placement="bottom" title="Enviar por correo"><span class="font-size-1rem">Enviar por correo</span></a>
+                        <a class="btn btn-outline-light btn-custom btn-lg cabin-regular" href="#contacto" data-toggle="tooltip" data-placement="right" title="Añadir a favoritos"><span class="font-size-1rem">Añadir a favoritos</span></a>
                     </div>
                 </div>
+                <di class="row py-2">
+                    <div class="col-sm-12">
+                        <div class="alert alert-success d-none" role="alert" id="alert">
+                            <p class="cabin-regular">El correo fue enviado correctamente...</p>
+                          </div>
+                    </div>
+                </di>
             </div>
         </div>
     </div>
@@ -127,7 +134,7 @@
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6 my-4">
                 <div class="cabin-regular">
-                    <p>INGREDIENTES
+                    <p><h4><span class="to-change-color">INGREDIENTES</span></h4>
                     <ul class="no-bullet">
                         Masa
 
@@ -163,7 +170,7 @@
             </div>
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6 my-4">
                 <div class="cabin-regular">
-                    <ol>PREPARACIÓN
+                    <ol><h4><span class="to-change-color">PREPARACIÓN</span></h4>
                         <li>Para la masa, disolver la levadura y el azúcar en agua tibia en un bol
                             grande. Dejar reposar 2 minutos. Agregar el aceite, la harina de maíz, sal y 400gr de harina.
                             Mezclar bien. Amasar y agregar el resto de harina, la cantidad necesaria para tener una masa
@@ -212,7 +219,7 @@
                 <div class="card">
                     <img src="./assets/img/recipe-card-1.png" class="card-img-top img-fluid" alt="card-1">
                     <div class="card-body">
-                        <h4 class="card-title cabin-regular " data-bs-toggle="collapse" href="#multiCollapse1" role="button" aria-expanded="true" aria-controls="multiCollapse1">PANQUEQUES CON MANJAR Y CREMA</h4>
+                        <h4 class="card-title cabin-regular ">PANQUEQUES CON MANJAR Y CREMA</h4>
                         <div class="collapse multi-collapse show" id="multiCollapse1">
                             <p class="card-text cabin-regular ">Mus enim elementum dignissim class eleifend justo, ut nunc magnis est vulputate nostra, blandit erat luctus faucibus orci.</p>
                         </div>
@@ -224,7 +231,7 @@
                 <div class="card">
                     <img src="./assets/img/recipe-card-2.png" class="card-img-top img-fluid" alt="card-2">
                     <div class="card-body">
-                        <h4 class="card-title cabin-regular " data-bs-toggle="collapse" href="#multiCollapse2" role="button" aria-expanded="true" aria-controls="multiCollapse2">TIRAMISÚ</h4>
+                        <h4 class="card-title cabin-regular ">TIRAMISÚ</h4>
                         <div class="collapse multi-collapse show" id="multiCollapse2">
                             <p class="card-text cabin-regular">Congue fermentum dignissim rhoncus elementum ac nisi, proin phasellus lacinia sed faucibus mauris, taciti scelerisque nulla ornare consequat.</p>
                         </div>
@@ -235,7 +242,7 @@
                 <div class="card">
                     <img src="./assets/img/recipe-card-3.png" class="card-img-top img-fluid" alt="card-3">
                     <div class="card-body">
-                        <h4 class="card-title cabin-regular " data-bs-toggle="collapse" href="#multiCollapse3" role="button" aria-expanded="true" aria-controls="multiCollapse3">PLATEADA</h4>
+                        <h4 class="card-title cabin-regular ">PLATEADA</h4>
                         <div class="collapse multi-collapse show" id="multiCollapse3">
                             <p class="card-text cabin-regular">Cubilia elementum posuere arcu rhoncus egestas lectus, diam aliquam laoreet ac eleifend risus, urna auctor inceptos mattis dapibus.</p>
                         </div>
@@ -250,7 +257,7 @@
                 <div class="text-center text-white py-4">
                     <h2 class="cabin-bold py-4">SUSCRÍBETE EN NUESTRO NEWSLETTER</h2>
                     <p class="cabin-regular">y obtén las mejores recetas que tenemos en <span class="lobster-regular">Ricomida</span></p>
-                    <a href="#" class="btn btn-outline-light btn-lg cabin-regular px-4">Empezar</a>
+                    <a href="#" class="btn btn-outline-light btn-lg cabin-regular px-4 font-size-1rem">Empezar</a>
                 </div>
             </div>
         </div>
@@ -260,7 +267,7 @@
             <div class="row">
                 <div class="col-sm-12">
                     <div class="text-center">
-                        <a class="logo" href="./index.html"><span class="lobster-regular text-white logo">Ricomida</span></a>
+                        <a class="link logo" href="./index.html"><span class="lobster-regular text-white logo">Ricomida</span></a>
                     </div>
                 </div>
             </div>
