--- a/index.html
+++ b/index.html
@@ -44,17 +44,17 @@
             </div>
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6 pt-4">
                 <div class="row">
-                    <div class="col-sm-6 separador">
+                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-9 col-xl-9 col-xxl-9 separador">
                         <h1 class="cabin-bold titulo">PIZZA AL ESTILO CHICAGO CON ESPINACAS Y CHAMPIÑONES</h1>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-sm-12 pt-4">
-                        <h3 class="cabin-bold">110 MIN / 6 A 8 PORCIONES</h3>
+                        <h3 class="cabin-bold tiempo">110 MIN / 6 A 8 PORCIONES</h3>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-12">
+                    <div class="col-sm-12 to-fix-button">
                         <a id="enviarCorreo" class="btn btn-outline-light btn-custom btn-lg cabin-regular" href="#portafolio"><span data-toggle="tooltip" data-placement="bottom" title="Enviar por correo"><span class="font-size-1rem">Enviar por correo</span></a>
                         <a class="btn btn-outline-light btn-custom btn-lg cabin-regular" href="#contacto" data-toggle="tooltip" data-placement="right" title="Añadir a favoritos"><span class="font-size-1rem">Añadir a favoritos</span></a>
                     </div>
@@ -134,10 +134,9 @@
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6 my-4">
                 <div class="cabin-regular">
-                    <p><h4><span class="to-change-color">INGREDIENTES</span></h4>
                     <ul class="no-bullet">
+                        <h4><span class="to-change-color">INGREDIENTES</span></h4>
                         Masa
-
                         <li>20 gr de levadura seca instantánea</li>
                         <li>1 cucharadita de azúcar</li>
                         <li>500 ml agua tibia</li>
@@ -146,7 +145,6 @@
                         <li>65 gr harina de maíz fina (chuchoca)</li>
                         <li>2 cucharaditas de sal</li>
                         <li>625 gr harina</li>
-
                     </ul>
                     <ul class="no-bullet">
                         Salsa
@@ -170,8 +168,8 @@
             </div>
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6 my-4">
                 <div class="cabin-regular">
-                    <ol><h4><span class="to-change-color">PREPARACIÓN</span></h4>
-                        <li>Para la masa, disolver la levadura y el azúcar en agua tibia en un bol
+                    <ol class="no-bullet"><h4><span class="to-change-color">PREPARACIÓN</span></h4>
+                        <li>1. Para la masa, disolver la levadura y el azúcar en agua tibia en un bol
                             grande. Dejar reposar 2 minutos. Agregar el aceite, la harina de maíz, sal y 400gr de harina.
                             Mezclar bien. Amasar y agregar el resto de harina, la cantidad necesaria para tener una masa
                             blanda. Poner en el mesón y amasar por 5 minutos o hasta tener una masa lisa y elástica (agregar
@@ -179,22 +177,22 @@
                             un bol aceitado, tapar con un paño de cocina limpio y dejar reposar hasta que la masa duplique
                             su volumen (leudar). Golpear la masa para que baje y luego dejar leudar por 40 minutos
                             adicionales.</li>
-                        <li>Mientras tanto preparar la salsa: Calentar 4 cucharadas de aceite en una olla a
+                        <li>2. Mientras tanto preparar la salsa: Calentar 4 cucharadas de aceite en una olla a
                             fuego medio. Agregar la cebolla, Orégano Gourmet, Albahaca Gourmet, sal y cocinar hasta que la
                             cebolla esté dorada. Agregar el ajo y cocinar por 30 segundos. Agregar los tomates junto al jugo
                             del tarro, a la mezcla de cebolla. Agregar el azúcar y cocinar hasta que la mezcla se haya
                             reducido y espesado, como 30 minutos. Sazonar con sal y pimienta a gusto. Reservar.</li>
-                        <li>Relleno:
+                        <li>3. Relleno:
                             Cocinar las chalotas en el aceite de oliva hasta que estén transparentes. Agregar los
                             champiñones y las espinacas, cocinar hasta que estén cocidos y se haya evaporado todo el líquido
                             que hayan votado los vegetales. Reservar.</li>
-                        <li>Calentar el horno a 220C.</li>
-                        <li>Una vez que la masa
+                        <li>4. Calentar el horno a 220C.</li>
+                        <li>5. Una vez que la masa
                             haya reposado, dividirla en dos bolas. Estirar cada masa para cubrir dos moldes (desmontables)
                             de 26 cm, hacer un borde de 5 cm con la masa. Dividir el relleno entre las dos pizza, tapar con
                             el queso mozarella, luego terminar con la salsa de tomates y finalmente espolvorear el queso
                             rallado.</li>
-                        <li>Hornear por 35 a 40 minutos o hasta que el relleno esté caliente y la base esté
+                        <li>6. Hornear por 35 a 40 minutos o hasta que el relleno esté caliente y la base esté
                             esponjosa y dorada. Esperar unos minutos antes de desmoldar.</li>
                     </ol>
                 </div>
@@ -210,7 +208,7 @@
         <div class="row">
             <div class="col-sm-12">
                 <div class="">
-                    <h3 class="text-center cabin-regular">RECETAS RELACIONADAS</h3>
+                    <h3 class="text-center cabin-bold">RECETAS RELACIONADAS</h3>
                 </div>
             </div>
         </div>
@@ -219,7 +217,7 @@
                 <div class="card">
                     <img src="./assets/img/recipe-card-1.png" class="card-img-top img-fluid" alt="card-1">
                     <div class="card-body">
-                        <h4 class="card-title cabin-regular ">PANQUEQUES CON MANJAR Y CREMA</h4>
+                        <h4 class="card-title cabin-bold ">PANQUEQUES CON MANJAR Y CREMA</h4>
                         <div class="collapse multi-collapse show" id="multiCollapse1">
                             <p class="card-text cabin-regular ">Mus enim elementum dignissim class eleifend justo, ut nunc magnis est vulputate nostra, blandit erat luctus faucibus orci.</p>
                         </div>
@@ -231,7 +229,7 @@
                 <div class="card">
                     <img src="./assets/img/recipe-card-2.png" class="card-img-top img-fluid" alt="card-2">
                     <div class="card-body">
-                        <h4 class="card-title cabin-regular ">TIRAMISÚ</h4>
+                        <h4 class="card-title cabin-bold ">TIRAMISÚ</h4>
                         <div class="collapse multi-collapse show" id="multiCollapse2">
                             <p class="card-text cabin-regular">Congue fermentum dignissim rhoncus elementum ac nisi, proin phasellus lacinia sed faucibus mauris, taciti scelerisque nulla ornare consequat.</p>
                         </div>
@@ -242,7 +240,7 @@
                 <div class="card">
                     <img src="./assets/img/recipe-card-3.png" class="card-img-top img-fluid" alt="card-3">
                     <div class="card-body">
-                        <h4 class="card-title cabin-regular ">PLATEADA</h4>
+                        <h4 class="card-title cabin-bold ">PLATEADA</h4>
                         <div class="collapse multi-collapse show" id="multiCollapse3">
                             <p class="card-text cabin-regular">Cubilia elementum posuere arcu rhoncus egestas lectus, diam aliquam laoreet ac eleifend risus, urna auctor inceptos mattis dapibus.</p>
                         </div>
